@@ -18,7 +18,8 @@ Build-Depends:
   doxygen,
   txt2tags,
 # test suite
-  libipc-run3-perl
+  libipc-run3-perl,
+  locales-all
 Maintainer: Cupt developers <cupt-devel@lists.alioth.debian.org>
 Uploaders: Eugene V. Lyubimkin <jackyf@debian.org>
 Homepage: http://wiki.debian.org/Cupt
