@@ -10,6 +10,9 @@ cupt (2.10.0~) UNRELEASED; urgency=low
       - Verifying repository signatures: use APT keyrings directly, now that
         they're finally world-readable.
       - Removed the 'copy the keyring' hack, introduced in 2.2.2.
+  * debian:
+    - control:
+      - Added build-dependency on locales-all (for locale-specific tests).
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 28 Sep 2016 13:10:13 +0200
 
